--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 </head>
 <body>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
+    <div id="app">
+        <h1>Lista degli utenti:</h1>
+        <ul>
+            <li v-for="contact in email">{{contact}}</li>
+        </ul>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
     <script src="js/main.js"></script>
     
 </body>
