--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div id="app">
         <h1>Lista degli utenti:</h1>
-        <ul>
+        <ul v-if="email.length == 10" >
             <li v-for="contact in email">{{contact}}</li>
         </ul>
     </div>
